--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
@@ -58,6 +60,11 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.0-rc02"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha13'
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
