--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion compose_version //kotlinCompilerExtensionVersion compose_version
     }
     packagingOptions {
         resources {
@@ -50,16 +50,16 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.ui:ui:1.3.0-alpha02"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-alpha02"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation "androidx.compose.material:material-icons-extended:1.3.0-alpha02"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
-    implementation 'androidx.fragment:fragment-ktx:1.4.1'
-    implementation "androidx.navigation:navigation-compose:2.5.0-rc02"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha13'
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation 'androidx.fragment:fragment-ktx:1.5.1'
+    implementation "androidx.navigation:navigation-compose:2.5.1"
+    implementation 'androidx.compose.material3:material3:1.0.0-alpha15'
+    implementation "androidx.compose.material:material-icons-extended:1.3.0-alpha02"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -71,7 +71,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-alpha02"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-alpha02"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0-alpha02"
 }
