--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.2.0-rc01'
+        compose_version = '1.2.0-rc01' //1.3.0-alpha02   '1.2.0-rc01'
         kotlin_version = '1.6.21' //1.7.0
     }
 
