--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-
     id 'org.jetbrains.kotlin.plugin.serialization'
+    id 'kotlin-kapt'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.bura.chat"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -50,28 +50,32 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation "androidx.compose.ui:ui:1.3.0-alpha02"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-alpha02"
+    implementation "androidx.compose.ui:ui:1.3.0-beta01"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta01"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation "androidx.compose.material:material-icons-extended:1.3.0-alpha02"
+    implementation "androidx.compose.material:material-icons-extended:1.3.0-beta01"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
-    implementation 'androidx.fragment:fragment-ktx:1.5.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.2'
     implementation "androidx.navigation:navigation-compose:2.5.1"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha15'
-    implementation "androidx.compose.material:material-icons-extended:1.3.0-alpha02"
+    implementation 'androidx.compose.material3:material3:1.0.0-beta01'
+    implementation "androidx.compose.material:material-icons-extended:1.3.0-beta01"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:4.9.3"
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.room:room-common:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
 
+    kapt 'androidx.room:room-compiler:2.4.3'
     //implementation "androidx.datastore:datastore-preferences:1.0.0"
     //implementation 'com.google.android.gms:play-services-drive:17.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-alpha02"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-alpha02"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0-alpha02"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-beta01"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-beta01"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0-beta01"
 }
