--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.0.0-beta01'
     implementation "androidx.compose.material:material-icons-extended:1.3.0-beta01"
 
+    //migrate from retrofit to ktor client because of websocket
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:4.9.3"
