--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,17 +49,17 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation "androidx.compose.ui:ui:1.3.0-beta01"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta01"
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation "androidx.compose.ui:ui:1.3.0-beta02"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta02"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation "androidx.compose.material:material-icons-extended:1.3.0-beta01"
+    implementation "androidx.compose.material:material-icons-extended:1.3.0-beta02"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
     implementation 'androidx.fragment:fragment-ktx:1.5.2'
-    implementation "androidx.navigation:navigation-compose:2.5.1"
-    implementation 'androidx.compose.material3:material3:1.0.0-beta01'
-    implementation "androidx.compose.material:material-icons-extended:1.3.0-beta01"
+    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation 'androidx.compose.material3:material3:1.0.0-beta02'
+    implementation "androidx.compose.material:material-icons-extended:1.3.0-beta02"
 
     //migrate from retrofit to ktor client because of websocket
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -70,13 +70,17 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.3'
 
     kapt 'androidx.room:room-compiler:2.4.3'
-    //implementation "androidx.datastore:datastore-preferences:1.0.0"
+    //kapt "android.arch.persistence.room:compiler:1.1.1"
+    //implementation "android.arch.persistence.room:runtime:1.1.1"//implementation "androidx.datastore:datastore-preferences:1.0.0"
     //implementation 'com.google.android.gms:play-services-drive:17.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-beta01"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-beta01"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0-beta01"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-beta02"
+
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-beta02"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0-beta02"
 }
