--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,16 +50,16 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation "androidx.compose.ui:ui:1.3.0-beta02"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta02"
+    implementation "androidx.compose.ui:ui:1.3.0-beta03"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta03"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation "androidx.compose.material:material-icons-extended:1.3.0-beta02"
+    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation "androidx.compose.material:material-icons-extended:1.3.0-beta03"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
-    implementation 'androidx.fragment:fragment-ktx:1.5.2'
+    implementation 'androidx.fragment:fragment-ktx:1.5.3'
     implementation "androidx.navigation:navigation-compose:2.5.2"
-    implementation 'androidx.compose.material3:material3:1.0.0-beta02'
-    implementation "androidx.compose.material:material-icons-extended:1.3.0-beta02"
+    implementation 'androidx.compose.material3:material3:1.0.0-beta03'
+    implementation "androidx.compose.material:material-icons-extended:1.3.0-beta03"
 
     //migrate from retrofit to ktor client because of websocket
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -69,6 +69,12 @@ dependencies {
     implementation 'androidx.room:room-common:2.4.3'
     implementation 'androidx.room:room-ktx:2.4.3'
 
+    implementation "io.insert-koin:koin-android:3.2.1"
+    //implementation "io.insert-koin:koin-android-compat:3.2.1"
+    //implementation "io.insert-koin:koin-androidx-workmanager:3.2.1"
+    implementation "io.insert-koin:koin-androidx-navigation:3.2.1"
+    implementation "io.insert-koin:koin-androidx-compose:3.2.0"
+
     kapt 'androidx.room:room-compiler:2.4.3'
     //kapt "android.arch.persistence.room:compiler:1.1.1"
     //implementation "android.arch.persistence.room:runtime:1.1.1"//implementation "androidx.datastore:datastore-preferences:1.0.0"
@@ -77,10 +83,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-beta02"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-beta03"
 
     androidTestImplementation "com.google.truth:truth:1.1.3"
 
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-beta02"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0-beta02"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-beta03"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0-beta03"
 }
